--- a/findly-builder/src/app/components/search-experience/search-experience.component.html
+++ b/findly-builder/src/app/components/search-experience/search-experience.component.html
@@ -53,32 +53,64 @@
                             <span>{{searchObject.searchWidgetConfig.buttonText}}</span>
                             <div class="hover-overlay-btn-img" (click)="buttonDisabled=false" *ngIf="buttonDisabled"><img src="assets/icons/search-experience/edit.svg"></div>
                         </button>
-                        <!--custom templates for tour guide-->
-                        <ng-template #searchBox>
-                            <p style="color:white">Click on search box to customize border and fill color</p>
-                        </ng-template>
-                        <ng-template #searchIconChange>
-                            <p style="color:white">Click on search icon to change icon as per your choice</p>
-                        </ng-template>
-                        <ng-template #placeholderText>
-                            <p style="color:white">Click on the text to customize text content and color</p>
-                        </ng-template>
-                        <ng-template #searchButton>
-                            <p style="color:white">Click on the button to customize button text, fill color and border color</p>
-                        </ng-template>
-                        <ng-template #counter let-step="step" let-total="total">
-                            <span  style="color:white">{{ step }} of {{ total }}</span>
-                        </ng-template>
-                        <ng-template #nextButton> 
-                            <button class="btn-customize kr-sg-button-primary btn_lg">Next</button>
-                        </ng-template>
-                        <ng-template #prevButton> 
-                            <button class="btn-customize kr-sg-button-secondary btn_lg">Previous</button>
-                        </ng-template>
-                        <ng-template #doneButton> 
-                            <button class="btn-customize kr-sg-button-primary btn_lg">Got it</button>
-                        </ng-template>
-                        <!----end tour -->                       
+
+                        <div class="tour-guide-data">
+                            <div class="close-guide">
+                                <img src="assets/icons/search-experience/close-tour.svg">
+                            </div>
+                            <div class="title-info">Click on search box to customize border and fill color</div>
+                            <div class="d-flex align-items-center justify-content-between">
+                                <div class="tour-length">1 of 4</div>
+                                <div class="bt-sec">
+                                    <button class="kr-sg-button-primary btn_lg mr-2">Next</button>
+                                    <button class="kr-sg-button-secondary btn_lg">Previous</button>
+                                </div>
+                            </div>
+                        </div>  
+                        
+                        <div class="tour-guide-data search-tour-icon">
+                            <div class="close-guide">
+                                <img src="assets/icons/search-experience/close-tour.svg">
+                            </div>
+                            <div class="title-info">Click on search icon to change the icon as per your choice</div>
+                            <div class="d-flex align-items-center justify-content-between">
+                                <div class="tour-length">2 of 4</div>
+                                <div class="bt-sec">
+                                    <button class="kr-sg-button-primary btn_lg mr-2">Next</button>
+                                    <button class="kr-sg-button-secondary btn_lg">Previous</button>
+                                </div>
+                            </div>
+                        </div> 
+
+                        <div class="tour-guide-data place-holder-text-tour">
+                            <div class="close-guide">
+                                <img src="assets/icons/search-experience/close-tour.svg">
+                            </div>
+                            <div class="title-info">Click on the text to customize text content and color</div>
+                            <div class="d-flex align-items-center justify-content-between">
+                                <div class="tour-length">3 of 4</div>
+                                <div class="bt-sec">
+                                    <button class="kr-sg-button-primary btn_lg mr-2">Next</button>
+                                    <button class="kr-sg-button-secondary btn_lg">Previous</button>
+                                </div>
+                            </div>
+                        </div> 
+
+                        <div class="tour-guide-data button-tour d-none">
+                            <div class="close-guide">
+                                <img src="assets/icons/search-experience/close-tour.svg">
+                            </div>
+                            <div class="title-info">Click on the button to customize button text, fill color and border color</div>
+                            <div class="d-flex align-items-center justify-content-between">
+                                <div class="tour-length">4 of 4</div>
+                                <div class="bt-sec">
+                                    <button class="kr-sg-button-primary btn_lg mr-2">Got it</button>
+                                    <button class="kr-sg-button-secondary btn_lg">Previous</button>
+                                </div>
+                            </div>
+                        </div>   
+                        
+                        
                     </div>
                     <div [ngSwitch]="selectSearch">                        
                         <div class="fill-colors-block" *ngSwitchCase="'inputBox'">
