--- a/findly-builder/src/app/components/search-experience/search-experience.component.scss
+++ b/findly-builder/src/app/components/search-experience/search-experience.component.scss
@@ -156,9 +156,82 @@
                     margin-bottom: 18px;
                 }
                 .search-customization-input{
+                    .tour-guide-data{
+                        position: absolute;
+                        width: 332px;
+                        top: 88px;
+                        background: #202124;
+                        border-radius: 4px;
+                        height: 140px;
+                        padding: 20px;
+                        color: #fff;
+                        z-index: 0;
+                        left: 420px;
+                        &.search-tour-icon{
+                            left: 12px;
+                            &::after{
+                                left: 27px;
+                            }
+                        }
+                        &.place-holder-text-tour{
+                            left: 30px;
+                            &::after{
+                                left: 85px;
+                            }
+                        }
+                        &.button-tour{
+                            left: auto;
+                            right: 165px;
+                        }
+                        &::before{
+                            content: "";
+                            position: fixed;
+                            width: 100%;
+                            height: 100%;                            
+                            top: 0;
+                            left: 0;
+                            background: #202124;
+                            opacity: 0.6;
+                            z-index: -1;
+                        }
+                        &::after{
+                            content: "";
+                            width: 16px;
+                            height: 16px;
+                            background: red;
+                            left: 50%;
+                            top: -8px;
+                            position: absolute;
+                            transform: rotate(-45deg);
+                            background: #202124;
+                        }
+                        .title-info{
+                            color: #FFFFFF;
+                            font-weight: normal;
+                            font-size: 14px;
+                            line-height: 20px;
+                            margin-bottom: 20px;
+                        }
+                        .tour-length{
+                            color: #FFFFFF;
+                            font-weight: normal;
+                            font-size: 14px;
+                            line-height: 20px;
+                        }      
+                        .close-guide{
+                            position: absolute;
+                            right: 10px;
+                            top: 8px;
+                            cursor: pointer;
+                        }                  
+                    }
                     .kr-sg-input-search{
                         width: 700px;
                         margin-right: 15px;
+                        &.added-tour{
+                            z-index: 1;
+                            pointer-events: none;
+                        }
                         .input-search{
                             padding: 0 15px 0 36px;
                             &:hover{
@@ -198,6 +271,10 @@
                     .btn-customize{
                         font-weight: normal;
                         position: relative;
+                        &.added-tour{
+                            z-index: 1;
+                            pointer-events: none;
+                        }
                         &:hover{
                             border: 0.5px solid #0D6EFD;
                             span{
