--- a/findly-builder/src/app/components/app-header/app-header.component.html
+++ b/findly-builder/src/app/components/app-header/app-header.component.html
@@ -21,8 +21,8 @@
                         <span routerLink="/index" class="d-none"></span>
                         <span routerLink="/query" class="d-none"></span>
                         <span routerLink="/attributes" class="d-none"></span>
-
                     </div>
+                    <div class="headerMenuTab" id='experimentsTab' [ngClass]="{'active' : mainMenu == '/experiments'}" (click)="analyticsClick('/experiments')">Experiments</div>
                     <div class="kr-sg-dropdowns headerMenuTab" [ngClass]="{'active' : (mainMenu == '/dashboard'
                      || mainMenu == '/userEngagement' || mainMenu == '/searchInsights' ||mainMenu == '/resultInsights')}">
                         <div class="dropdown dropdown-open">
@@ -36,7 +36,6 @@
                         </div>
                     </div>
                     <!-- <div class="headerMenuTab" [routerLink]="['/dashboard']" skipLocationChange routerLinkActive="active" (click)="analyticsClick('metrics')">Analytics</div> -->
-                    <div class="headerMenuTab" id='experimentsTab' [ngClass]="{'active' : mainMenu == '/experiments'}" (click)="analyticsClick('/experiments')">Experiments</div>
                     <div class="headerMenuTab" id='channelsTab' [ngClass]="{'active' : mainMenu == '/settings'}" (click)="analyticsClick('/settings')">Settings </div>
                 </div>
             </div>
@@ -61,7 +60,7 @@
                     <button class="kr-sg-button-primary btn_lg" [disabled]='training' (click)="train()">{{(training)?'Training...':'Train'}}</button>
                 </div> -->
                 <li class="nav-item app-dropdown">
-                    <div class="kr-sg-dropdowns" ngbDropdown [placement]="'bottom-center'">
+                    <div class="kr-sg-dropdowns"  ngbDropdown #myDrop="ngbDropdown" [placement]="'bottom-center'">
                         <div class="dropdown dropdown-open">
                             <button class="dropdown-toggle dropdown-input" id="dropdownBasic1" ngbDropdownToggle>{{appName|titlecase}}</button>
                             <ul class="dropdown-menu content-menu" ngbDropdownMenu>
@@ -69,13 +68,13 @@
                                     <div class="main-title">SearchAssist Apps</div>
                                     <div class="apps-block">
                                         <div class="title-secondary">Recent Apps</div>
-                                        <div class="app-name-block" *ngFor='let app of recentApps'>
+                                        <div class="app-name-block" *ngFor='let app of recentApps' (click)="openApp(app);myDrop.close()">
                                             <div class="app-name">{{app.name|titlecase}}</div>
-                                            <div class="shared-name">{{app.createdBy===userId?'My App':app.userDetails.fullName}}</div>
+                                            <div class="shared-name">{{app.createdBy===userId?'My App':'Shared by '+app.userDetails.fullName}}</div>
                                         </div>                                                       
                                     </div>
-                                    <div class="view-app-apps">View all Apps</div>
-                                    <div class="create-new-app">Create New App</div>
+                                    <div class="view-app-apps"  [routerLink]="['/apps']" routerLinkActive="active" skipLocationChange (click)="analyticsClick('apps',true)">View all Apps</div>
+                                    <div class="create-new-app" (click)="openCreateApp()">Create New App</div>
                                 </div>
                             </ul>
                         </div>                                            
@@ -86,9 +85,9 @@
                 </li>
                 <li class="nav-item search-block">
                     <div class="search_icon">
-                        <img src="assets/icons/sidemenu/search.svg">
+                        <img src="assets/icons/sidemenu/search.svg" (click)="showSearch=!showSearch;searchText=''">
                     </div>
-                    <div class="global-searc-container">
+                    <div class="global-searc-container" *ngIf='showSearch'>
                         <div class="kr-sg-input-search">     
                             <input type="text" placeholder="Search" class="input-search" (keyup.enter)="triggerRoute(searchText)" autocomplete="off" [(ngModel)]="searchText" [ngbTypeahead]="search" [resultTemplate]="rt" [inputFormatter]="formatter">                                                      
                             <img src="assets/icons/search_gray.svg" class="search-icon">
@@ -182,3 +181,41 @@
         </div>
     </nav>
 </header>
+
+<!--create new app popup-->
+<kr-modal modalType="default" #createAppPop>
+    <div class="modal-header">
+          <h4 class="modal-title">Create App</h4>
+        </div>
+        <div class="modal-body textAlignLeft">
+          <div class="kr-sg-input-text mb-3">
+            <div class="label-text">Name</div>
+            <input maxlength="128" type="text" autocomplete="off" placeholder="App name" class="input-text" [(ngModel)]="newApp.name" name="appName">
+          </div>
+          <div class="kr-sg-input-text-area mb-2">
+            <div class="label-text">Description</div>
+            <textarea maxlength="512" placeholder="App description " autocomplete="off" class="input-text" [(ngModel)]="newApp.description" name="appDesc"></textarea>
+          </div>
+          <div class="kr-sg-dropdowns w-100 mt-1">
+            <div class="label-text">Language</div>
+            <div class="dropdown dropdown-open">
+                <button class="dropdown-toggle dropdown-input" data-toggle="dropdown" disabled>English</button>                                            
+                <ul class="dropdown-menu content-menu">
+                <li class="search-box">
+                    <input maxlength="128" type="text" placeholder="Search" class="seach-input">
+                </li>                                                
+                  <li><a>English</a></li>
+                  <li><a>German</a></li>
+                  <li><a>French</a></li>
+                </ul>
+             </div>
+        </div>
+        </div>
+        <div class="modal-footer" [ngClass]="{'disabled': creatingInProgress}">
+           <button type="button" class="btn kr-btn-cancel" data-dismiss="modal" (click)="closeCreateApp()">Close</button>
+           <button [disabled]="!newApp.name"  type="button" class="kr-sg-button-primary btn_lg"  data-dismiss="modal" (click)='createFindlyApp()'>{{creatingInProgress?'Creating...':'Proceed'}}</button>
+       
+          </div>
+  
+  
+  </kr-modal>
